[package]
name = "my_oil_price_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18.1"
tokio = { version = "1.12", features = ["full"] }
futures = "0.3"
